<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/dgts__Container">
        <com.digits.sdk.android.LogoImageView android:layout_gravity="center_horizontal" android:id="@+id/dgts__logo" android:visibility="gone" android:layout_width="100dp" android:layout_height="wrap_content" android:adjustViewBounds="true" style="@style/dgts__HeaderMargin"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dgts__phone_number_text" style="@style/dgts__Title"/>
        <com.digits.sdk.android.CountryListSpinner android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@+id/dgts__countryCode" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dgts__country_code_margin_bottom"/>
        <EditText android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@+id/dgts__phoneNumberEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dgts__margin_bottom" android:hint="@string/dgts__phone_number_edit_hint" android:inputType="phone" android:imeOptions="actionNext"/>
        <com.digits.sdk.android.StateButton android:id="@+id/dgts__sendCodeButton" android:layout_width="match_parent" android:layout_height="@dimen/tw__login_btn_height" android:layout_marginBottom="@dimen/dgts__margin_bottom" app:finishStateText="@string/dgts__done" app:progressStateText="@string/dgts__sending" app:startStateText="@string/dgts__send_confirmation_code"/>
        <TextView android:id="@+id/dgts__termsText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dgts__terms_text" style="@style/dgts__Terms"/>
    </LinearLayout>
</ScrollView>
