<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/dgts__Container">
        <TextView android:id="@+id/dgts__titleText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dgts__confirmation_edit_hint" style="@style/dgts__EnterConfirmationCodeTitle"/>
        <com.digits.sdk.android.LinkTextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/dgts__editPhoneNumber" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dgts__margin_bottom" android:layout_below="@+id/dgts__titleText"/>
        <EditText android:layout_gravity="center_horizontal" android:id="@+id/dgts__confirmationEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dgts__margin_bottom" android:hint="@string/dgts__confirmation_code" android:ems="10" android:layout_below="@+id/dgts__editPhoneNumber" android:inputType="number" android:imeOptions="actionNext"/>
        <View android:id="@+id/strut" android:visibility="invisible" android:layout_width="0dp" android:layout_height="0dp" android:layout_centerHorizontal="true"/>
        <com.digits.sdk.android.StateButton android:id="@+id/dgts__createAccount" android:layout_width="match_parent" android:layout_height="@dimen/tw__login_btn_height" android:layout_marginBottom="@dimen/dgts__margin_bottom" android:layout_below="@+id/dgts__confirmationEditText"/>
        <com.digits.sdk.android.InvertedStateButton android:id="@+id/dgts__resendConfirmationButton" android:layout_width="0dp" android:layout_height="@dimen/tw__login_btn_height" android:layout_marginRight="@dimen/dgts__margin_right" android:layout_marginBottom="@dimen/dgts__margin_bottom" android:layout_below="@+id/dgts__createAccount" android:layout_alignRight="@+id/strut" android:layout_alignParentLeft="true" app:finishStateText="@string/dgts__done" app:progressStateText="@string/dgts__sending" app:startStateText="@string/dgts__resend_confirmation_button_code"/>
        <com.digits.sdk.android.InvertedStateButton android:layout_gravity="center" android:id="@+id/dgts__callMeButton" android:layout_width="0dp" android:layout_height="@dimen/tw__login_btn_height" android:layout_marginLeft="@dimen/dgts__margin_left" android:layout_marginBottom="@dimen/dgts__margin_bottom" android:layout_below="@+id/dgts__createAccount" android:layout_alignLeft="@+id/strut" android:layout_alignParentRight="true" app:finishStateText="@string/dgts__calling" app:progressStateText="@string/dgts__calling" app:startStateText="@string/dgts__call_me"/>
        <TextView android:id="@+id/dgts__countdownTimer" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/dgts__CountDownTimer"/>
        <TextView android:id="@+id/dgts__termsTextCreateAccount" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/dgts__resendConfirmationButton" style="@style/dgts__Terms"/>
    </RelativeLayout>
</ScrollView>
