<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#0195ff" android:layout_width="match_parent" android:layout_height="48dp">
        <TextView android:textSize="18sp" android:textColor="@android:color/white" android:id="@+id/rc_btn_cancel" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14dp" android:text="@string/rc_cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="20sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rc_choose_members" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0px" android:layout_height="0px"/>
    <EditText android:textSize="14sp" android:id="@+id/rc_edit_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/rc_search" android:singleLine="true"/>
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ListView android:layout_gravity="center" android:id="@+id/rc_list" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="@null"/>
        <TextView android:textSize="30dp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@+id/rc_popup_bg" android:background="@drawable/rc_bg_toast" android:visibility="invisible" android:layout_width="80dp" android:layout_height="80dp"/>
        <io.rong.imkit.mention.SideBar android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/rc_sidebar" android:layout_width="20dp" android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
