<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="64dp" android:layout_marginLeft="16dp" android:layout_marginTop="16dp">
                <io.rong.imkit.widget.AsyncImageView android:id="@+id/portrait" android:background="@drawable/rc_default_portrait" android:layout_width="64dp" android:layout_height="64dp" android:layout_centerVertical="true"/>
                <TextView android:id="@+id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginTop="10dp" android:singleLine="true" android:layout_toRightOf="@+id/portrait" style="@style/RCTheme.Message.TextView"/>
                <TextView android:id="@+id/account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginTop="3dp" android:layout_toRightOf="@+id/portrait" android:layout_below="@+id/name" style="@style/RCTheme.Message.RichContent.TextView"/>
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/rel_group_intro" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="17dp">
                <TextView android:id="@+id/func" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:text="@string/rc_pub_service_info_description" android:layout_centerVertical="true" style="@style/RCTheme.Message.TextView"/>
                <TextView android:id="@+id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginRight="32dp" android:layout_centerVertical="true" style="@style/RCTheme.Message.RichContent.TextView"/>
            </LinearLayout>
            <View android:background="#e4e4e4" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp"/>
            <FrameLayout android:id="@+id/rc_layout" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <Button android:textSize="16sp" android:textColor="@color/rc_text_color_primary_inverse" android:id="@+id/enter" android:background="@drawable/rc_btn_public_service_enter_selector" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="14dp" android:layout_marginRight="16dp" android:text="@string/rc_pub_service_info_enter"/>
            <Button android:textSize="16sp" android:textColor="@color/rc_text_color_primary_inverse" android:id="@+id/follow" android:background="@drawable/rc_btn_public_service_enter_selector" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="17dp" android:layout_marginRight="16dp" android:text="@string/rc_pub_service_info_follow"/>
            <Button android:textSize="16sp" android:textColor="@color/rc_text_color_primary_inverse" android:id="@+id/unfollow" android:background="@drawable/rc_btn_public_service_unfollow_selector" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="14dp" android:layout_marginRight="16dp" android:text="@string/rc_pub_service_info_unfollow"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
