<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#fff" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/avoscloud_feedback_input_wrapper" android:background="@color/avoscloud_feedback_input_wrap_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <FrameLayout android:id="@+id/avoscloud_feedback_functional_wrap" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerInParent="true">
            <ImageView android:id="@+id/avoscloud_feedback_add_image" android:background="@color/avoscloud_feedback_input_wrap_background" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:src="@android:drawable/ic_menu_gallery"/>
            <Button android:textStyle="bold" android:textColor="@color/avoscloud_feedback_text_gray" android:id="@+id/avoscloud_feedback_send" android:background="@color/avoscloud_feedback_input_wrap_background" android:padding="5dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/avoscloud_feedback_send_text"/>
        </FrameLayout>
        <EditText android:textColor="@color/avoscloud_feedback_text_gray" android:id="@+id/avoscloud_feedback_input" android:background="@color/avoscloud_feedback_input_wrap_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:minHeight="40dp" android:hint="@string/avoscloud_feedback_input_hint" android:layout_toLeftOf="@+id/avoscloud_feedback_functional_wrap" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:textCursorDrawable="@null"/>
    </RelativeLayout>
    <EditText android:textSize="19sp" android:textColor="@color/avoscloud_feedback_text_gray" android:id="@+id/avoscloud_feedback_contact" android:background="@color/avoscloud_feedback_input_wrap_background" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:hint="@string/avoscloud_feedback_contact_hint" android:layout_alignParentTop="true" android:textCursorDrawable="@null"/>
    <ListView android:id="@+id/avoscloud_feedback_thread_list" android:layout_width="match_parent" android:layout_height="wrap_content" android:transcriptMode="normal" android:divider="#000" android:dividerHeight="0dp" android:layout_above="@+id/avoscloud_feedback_input_wrapper" android:layout_below="@+id/avoscloud_feedback_contact"/>
</RelativeLayout>
